samples/_failures_safe/1761169387_65355e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ba6831f.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
